FIX: Improve color contrast of help text (#177)
closes #177

--- a/classes/help-text.css
+++ b/classes/help-text.css
@@ -1,5 +1,5 @@
 .help-text {
-  color:     #AAA;
+  color:     var(--martinique);
   font-size: smaller;
   padding:   var(--text-padding-sm);
 }
